Ajustes e implementacao do detalhamento do pedido dos garçons
