# src/http/routes/cash.routes.ts
@@ -9,6 +9,8 @@ import { GetCashOperatorSessionDetailUseCase } from "../../application/cash/GetC
 import { ListCashOrdersForDayUseCase } from "../../application/cash/ListCashOrdersForDayUseCase.js";
 import { OpenCashDaySessionUseCase } from "../../application/cash/OpenCashDaySessionUseCase.js";
 import { OpenCashOperatorSessionUseCase } from "../../application/cash/OpenCashOperatorSessionUseCase.js";
+import { AddCashOrderLineUseCase } from "../../application/cash/AddCashOrderLineUseCase.js";
+import { GetCashOrderDetailUseCase } from "../../application/cash/GetCashOrderDetailUseCase.js";
 import { OpenCashOrderUseCase } from "../../application/cash/OpenCashOrderUseCase.js";
 import { RecordCashMovementUseCase } from "../../application/cash/RecordCashMovementUseCase.js";
 import { RecordPrincipalCashMovementUseCase } from "../../application/cash/RecordPrincipalCashMovementUseCase.js";
@@ -16,9 +18,12 @@ import { pool } from "../../infra/database/postgres.js";
 import { PostgresCashDaySessionRepository } from "../../infra/repositories/PostgresCashDaySessionRepository.js";
 import { PostgresCashMovementRepository } from "../../infra/repositories/PostgresCashMovementRepository.js";
 import { PostgresCashOperatorSessionRepository } from "../../infra/repositories/PostgresCashOperatorSessionRepository.js";
+import { PostgresCashOrderLineRepository } from "../../infra/repositories/PostgresCashOrderLineRepository.js";
 import { PostgresCashOrderRepository } from "../../infra/repositories/PostgresCashOrderRepository.js";
 import { PostgresCashPrincipalMovementRepository } from "../../infra/repositories/PostgresCashPrincipalMovementRepository.js";
 import { PostgresDiningTableRepository } from "../../infra/repositories/PostgresDiningTableRepository.js";
+import { PostgresProductRepository } from "../../infra/repositories/PostgresProductRepository.js";
+import { PostgresStockEntryRepository } from "../../infra/repositories/PostgresStockEntryRepository.js";
 import { PostgresOperatorRepository } from "../../infra/repositories/PostgresOperatorRepository.js";
 import { CashRegisterController } from "../controllers/CashRegisterController.js";
 
@@ -29,6 +34,9 @@ const cashOperatorSessionRepository = new PostgresCashOperatorSessionRepository(
 const cashMovementRepository = new PostgresCashMovementRepository(pool);
 const cashPrincipalMovementRepository = new PostgresCashPrincipalMovementRepository(pool);
 const cashOrderRepository = new PostgresCashOrderRepository(pool);
+const cashOrderLineRepository = new PostgresCashOrderLineRepository(pool);
+const stockEntryRepository = new PostgresStockEntryRepository(pool);
+const productRepository = new PostgresProductRepository(pool);
 const diningTableRepository = new PostgresDiningTableRepository(pool);
 const operatorRepository = new PostgresOperatorRepository(pool);
 
@@ -81,8 +89,16 @@ const cashRegisterController = new CashRegisterController(
     cashOrderRepository,
     diningTableRepository,
   ),
-  new CloseCashOrderUseCase(cashDaySessionRepository, cashOrderRepository),
+  new CloseCashOrderUseCase(cashDaySessionRepository, cashOrderRepository, cashOrderLineRepository),
   new ListCashOrdersForDayUseCase(cashDaySessionRepository, cashOrderRepository),
+  new AddCashOrderLineUseCase(
+    cashDaySessionRepository,
+    cashOrderRepository,
+    cashOrderLineRepository,
+    productRepository,
+    stockEntryRepository,
+  ),
+  new GetCashOrderDetailUseCase(cashOrderRepository, cashOrderLineRepository),
 );
 
 cashRoutes.post("/day-sessions", cashRegisterController.openCashDaySession);
@@ -132,6 +148,10 @@ cashRoutes.get(
   "/operator-sessions/:operatorSessionId/detail",
   cashRegisterController.getOperatorSessionDetail,
 );
+
+cashRoutes.get("/orders/:cashOrderId", cashRegisterController.getCashOrderDetail);
+
+cashRoutes.post("/orders/:cashOrderId/lines", cashRegisterController.addCashOrderLine);
 
 cashRoutes.patch("/orders/:cashOrderId/close", cashRegisterController.closeCashOrder);
 
